<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SecondSight</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="delete">Delete</string>
	<string name="edit">edit</string>
	<string name="menu_next_camera">Next Cam</string>
	<string name="menu_take_photo">Take Photo</string>
	<string name="photo_delete_prompt_message">This photo is saved in your Gallery. Do you want to delete it?</string>
	<string name="photo_delete_prompt_title">Delete photo?</string>
	<string name="photo_error_message">Failed to save photo</string>
	<string name="photo_edit_chooser_title">Edit photo with&#8230;</string>
	<string name="photo_send_chooser_title">Share photo with&#8230;</string>
	<string name="photo_send_extra_subject">My photo from Second Sight</string>
	<string name="photo_send_extra_text">Check out my photo from the Second Sight app!</string>
	<string name="share">Share</string>
	<string name="menu_next_curve_filter">Next Curve</string>
	<string name="menu_next_mixer_filter">Next Mixter</string>
	<string name="menu_next_convolution_filter">Next Kernel</string>
	<string name="menu_next_image_detection_filter">Next Tracker</string>
</resources>
